--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "jwt-decode": "^3.1.2",
     "mobx": "^6.8.0",
     "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
