configure remote server

--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,7 @@
 PORT=5000
 DB_NAME=casinaki
-DB_USER=postgres
-DB_PASSWORD=cantstop
-DB_HOST=localhost
+DB_USER=default
+DB_PASSWORD=2CvqxtF4fXhLYM3gLeFZA7ul6AiGhjrQ
+DB_HOST=dpg-cg6861d269v5l655js7g-a
 DB_PORT=5432
 SECRET_KEY=killerubiycabrawlstars
