--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "express-fileupload": "^1.4.0",
     "express-validator": "^6.15.0",
     "jsonwebtoken": "^9.0.0",
+    "mysql2": "^3.2.0",
     "pg": "^8.9.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.28.1",
