--- a/server/.env_example
+++ b/server/.env_example
@@ -3,5 +3,5 @@ DB_NAME=YOUR_DATABASE_NAME
 DB_USER=YOUR_DATABASE_USER
 DB_PASSWORD=USER_PASSWORD
 DB_HOST=DATABASE_HOST
-DB_PORT=5432
+DB_PORT=3306/5432
 SECRET_KEY=YOUR_SECRET_KEY
