--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "server",
-  "version": "0.3.0",
+  "version": "0.3.3",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "express-validator": "^6.15.0",
+    "joi": "^17.8.4",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.2.0",
     "pg": "^8.9.0",
