--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js --ignore *.json",
+	"start": "node index.js"
   },
   "author": "ladzislaf",
   "license": "ISC",
@@ -13,8 +14,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-fileupload": "^1.4.0",
-    "express-validator": "^6.15.0",
     "joi": "^17.8.4",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.2.0",
