--- a/server/.env_example
+++ b/server/.env_example
@@ -1,7 +1,10 @@
 PORT=5000
+DB_DIALECT=postgres
 DB_NAME=YOUR_DATABASE_NAME
 DB_USER=YOUR_DATABASE_USER
 DB_PASSWORD=USER_PASSWORD
 DB_HOST=DATABASE_HOST
-DB_PORT=3306/5432
+DB_PORT=5432
 SECRET_KEY=YOUR_SECRET_KEY
+
+CLIENT_URL=YOUR_CLIENT_URL
