--- a/next/package.json
+++ b/next/package.json
@@ -15,7 +15,8 @@
 		"@prisma/client": "^5.14.0",
 		"next": "14.2.3",
 		"react": "^18",
-		"react-dom": "^18"
+		"react-dom": "^18",
+		"vercel": "^34.2.0"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
