--- a/next/package.json
+++ b/next/package.json
@@ -24,9 +24,8 @@
 		"@types/react-dom": "^18",
 		"eslint": "^8",
 		"eslint-config-next": "14.2.3",
-		"postcss": "^8",
 		"prisma": "^5.14.0",
-		"tailwindcss": "^3.4.1",
+		"sass": "^1.77.2",
 		"ts-node": "^10.9.2",
 		"typescript": "^5"
 	}
