--- a/next/package.json
+++ b/next/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"@prisma/client": "^5.14.0",
 		"next": "14.2.3",
+		"next-auth": "^4.24.7",
 		"react": "^18",
 		"react-dom": "^18",
 		"vercel": "^34.2.0"
