--- a/next/package.json
+++ b/next/package.json
@@ -13,6 +13,7 @@
 	},
 	"dependencies": {
 		"@prisma/client": "^5.14.0",
+		"clsx": "^2.1.1",
 		"next": "14.2.3",
 		"next-auth": "^4.24.7",
 		"react": "^18",
