--- a/server/.env_example
+++ b/server/.env_example
@@ -9,3 +9,9 @@ DB_PORT=5432
 SECRET_KEY=YOUR_SECRET_KEY
 
 CLIENT_URL=YOUR_CLIENT_URL
+
+# Connect to Supabase via connection pooling with Supavisor.
+DATABASE_URL=...
+
+# Direct connection to the database. Used for migrations.
+DIRECT_URL=...
