--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@prisma/client": "^5.14.0",
     "@vercel/kv": "^1.0.1",
     "clsx": "^2.1.1",
-    "next": "14.2.3",
+    "next": "^14.2.4",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
