--- a/package.json
+++ b/package.json
@@ -1,41 +1,42 @@
 {
-  "name": "casinaki-project-next",
-  "version": "0.2.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "test": "jest"
-  },
-  "prisma": {
-    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
-  },
-  "dependencies": {
-    "@prisma/client": "^5.14.0",
-    "@vercel/kv": "^1.0.1",
-    "clsx": "^2.1.1",
-    "next": "^14.2.4",
-    "next-auth": "^4.24.7",
-    "react": "^18",
-    "react-dom": "^18",
-    "vercel": "^34.2.0"
-  },
-  "devDependencies": {
-    "@testing-library/jest-dom": "^6.4.5",
-    "@testing-library/react": "^15.0.7",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "prisma": "^5.14.0",
-    "sass": "^1.77.2",
-    "ts-node": "^10.9.2",
-    "typescript": "^5"
-  }
+	"name": "casinaki-project-next",
+	"version": "0.2.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"test": "jest"
+	},
+	"prisma": {
+		"seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+	},
+	"dependencies": {
+		"@prisma/client": "^5.14.0",
+		"@vercel/kv": "^1.0.1",
+		"clsx": "^2.1.1",
+		"next": "^14.2.4",
+		"next-auth": "^4.24.7",
+		"react": "^18",
+		"react-dom": "^18",
+		"socket.io-client": "^4.7.5",
+		"vercel": "^34.2.0"
+	},
+	"devDependencies": {
+		"@testing-library/jest-dom": "^6.4.5",
+		"@testing-library/react": "^15.0.7",
+		"@types/jest": "^29.5.12",
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"eslint": "^8",
+		"eslint-config-next": "14.2.3",
+		"jest": "^29.7.0",
+		"jest-environment-jsdom": "^29.7.0",
+		"prisma": "^5.14.0",
+		"sass": "^1.77.2",
+		"ts-node": "^10.9.2",
+		"typescript": "^5"
+	}
 }
