--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
 			"@/*": ["./src/*"]
 		}
 	},
-	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "prisma/seed.ts"],
+	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "prisma/seed.ts", "src/app/api/socket/route.js", "src/ws-server/server.mjs"],
 	"exclude": ["node_modules"]
 }
