--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"clsx": "^2.1.1",
 		"next": "^14.2.4",
 		"next-auth": "^4.24.7",
+		"next-intl": "^3.17.2",
 		"next-themes": "^0.3.0",
 		"react": "^18",
 		"react-dom": "^18",
