--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
-		"test": "jest"
+		"test": "jest",
+		"prepare": "husky",
+		"prettier": "prettier --write ."
 	},
 	"prisma": {
 		"seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
@@ -34,11 +36,15 @@
 		"@types/react-dom": "^18",
 		"eslint": "^8",
 		"eslint-config-next": "14.2.3",
+		"husky": "^9.1.7",
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
+		"lint-staged": "^15.2.11",
+		"prettier": "^3.4.2",
 		"prisma": "^5.14.0",
 		"sass": "^1.77.2",
 		"ts-node": "^10.9.2",
 		"typescript": "^5"
-	}
+	},
+	"packageManager": "yarn@1.22.22"
 }
