--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 	"devDependencies": {
 		"@testing-library/jest-dom": "^6.4.5",
 		"@testing-library/react": "^15.0.7",
+		"@trivago/prettier-plugin-sort-imports": "^5.2.1",
 		"@types/jest": "^29.5.12",
 		"@types/node": "^20",
 		"@types/react": "^18",
